--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,6 +1,6 @@
 // The MIT License (MIT)
 //
-// Copyright (c) 2015-2018 Yegor Bugayenko
+// Copyright (c) 2015-2018 Yegor Bugayenko, David Zollikofer
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -34,7 +34,7 @@
 
 html,
 body {
-  @extend %sans-serif;
+  @extend %serif;
   width: 100%;
 }
 
@@ -78,7 +78,7 @@ footer {
 article {
   background: $white;
   border: 1px solid lighten($black, 85);
-  border-radius: .4 * $em;
+  border-radius: .1 * $em;
 }
 
 header {
