--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -1,6 +1,6 @@
 // The MIT License (MIT)
 //
-// Copyright (c) 2015-2018 Yegor Bugayenko
+// Copyright (c) 2015-2018 Yegor Bugayenko, David Zollikofer
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -22,53 +22,22 @@
 
 @import 'defs';
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: $black;
-  margin-bottom: $em;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: Georgia, serif;
+    font-weight: normal;
+    margin: 30px 0px 10px 0px;
+    padding: 0;
 }
 
-h1 {
-  font-size: 2 * $em;
-  font-weight: 500;
-  line-height: 2.3 * $em;
-  margin-top: 4 * $em;
-}
-
-h2 {
-  font-size: 1.4 * $em;
-  font-weight: 400;
-  line-height: 1.7 * $em;
-  margin-top: 3 * $em;
-}
-
-h3 {
-  font-size: 1.2 * $em;
-  line-height: 1.5 * $em;
-  margin-top: 2 * $em;
-}
-
-h4 {
-  font-size: $em;
-  line-height: 1.3 * $em;
-  margin-top: $em;
-}
-
-h5 {
-  font-size: .8 * $em;
-  font-weight: bold;
-  line-height: 1.2 * $em;
-  text-transform: uppercase;
-}
-
-h6 {
-  color: $gray;
-  font-size: .8 * $em;
-  font-weight: bold;
-  line-height: 1 * $em;
-  text-transform: uppercase;
-}
+h1 { margin-top: 0; padding-top: 0; font-size: 240%; }
+h2 { font-size: 180%; }
+  h3 { font-size: 150%; }
+  h4 { font-size: 130%; }
+  h5 { font-size: 100%; }
+  h6 { font-size: 100%; }
